--- a/non-root/Dockerfile
+++ b/non-root/Dockerfile
@@ -1,18 +1,18 @@
-FROM alpine:3.12
+FROM ubuntu:26.04
 
 ENV VITASDK /usr/local/vitasdk
 ENV PATH ${VITASDK}/bin:$PATH
 
 RUN apk update 
 
-RUN apk add git curl bash sudo python3
+RUN apt-get update && apt install -y git curl bash sudo python3 bzip2 wget xz-utils
 
 RUN git clone https://github.com/vitasdk-softfp/vdpm.git --depth=1 && \
     cd vdpm/ && chmod +x ./*.sh && \
     ./bootstrap-vitasdk.sh && ./install-all.sh && cd .. && rm -fr vdpm/
 
 # Second stage of Dockerfile
-FROM alpine:3.12
+FROM ubuntu:26.04
 
 COPY --from=0 ${VITASDK} ${VITASDK}
 
@@ -20,10 +20,10 @@ ARG USER=vitasdk
 ENV HOME /home/$USER
 
 # install sudo as root
-RUN apk add --no-cache sudo
+RUN apt-get update && apt-get install -y sudo
 
 # add new user
-RUN adduser -D $USER \
+RUN useradd $USER \
         && echo "$USER ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$USER \
         && chmod 0440 /etc/sudoers.d/$USER
 
